# QC-Client-rs

./: .gitignore  CMakeLists.txt  README.md
axioo-qc-client/: Cargo.toml  Exit.bat  build.ps1  build.rs  installer.iss  manifest.xml
axioo-qc-client/dll/: systeminfo.lib
axioo-qc-client/src/: lib.rs  main.rs
axioo-qc-client/src/bindings/: mod.rs  systeminfo.rs
certs/: EterninetyCert.cer  EterninetyCert.pfx  EterninetyCert.pvk
include/: ConsoleColors.hpp  Logger.hpp  SystemInfoCollector.hpp  SystemInfoWrapper.h  WMIHelper.hpp
src/: Logger.cpp  SystemInfoCollector.cpp  SystemInfoWrapper.cpp  WMIHelper.cpp  main.cpp  systeminfo.rc
