[package]
name = "axioo-qc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
libloading = "0.8"
once_cell = "1.18"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
scopeguard = "1.2"
chrono = "0.4"
winapi = { version = "0.3", features = ["wincon", "winuser"] }
crossterm = "0.27"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

[build-dependencies]
bindgen = "0.69"
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "Axioo QC System"
FileDescription = "Axioo QC System Service"
ProductName = "Axioo QC System"
ProductVersion = "1.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true